<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_VisuCtrlUnitFrame" Id="{6fc4432a-153e-439e-8fbb-ff1b562faa8d}">
    <Declaration><![CDATA[TYPE ST_VisuCtrlUnitFrame :
STRUCT
	sName : STRING := 'Unknown';	(* Name of object for any visu frame *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>